# fatras

./: LICENSE  README.md  dune-project  fatras.opam
lib/router/: dune  hole.ml  hole.mli  pattern.ml  pattern.mli
test/router/: dune  hole_test.ml  pattern_test.ml
